#10 - sbt should be used to build and deploy J8+ - Updated: release note

--- a/notes/0.0.12.md
+++ b/notes/0.0.12.md
@@ -1,5 +1,7 @@
 # J8+ - [0.0.12](https://github.com/Kevin-Lee/j8plus/milestones/0.0.12)
 
+## Changes
+
 * Functions are curriable (also Function2 was added) (#4)
 * Utilies for currying to curry method references (#5)
 * Predicates are curriable (also Predicate2 was added) (#6)
@@ -9,7 +11,9 @@
 * sbt is used to build and deploy J8+ (#10)
 
 
-# J8+ - Before 0.0.12
+# J8+ - Before 0.0.12 (June 2014 ~ June 2015)
+
+## Changes
 
 * Tail call optimization using Trampoline.
 * Useful functions like
