--- a/notes/0.0.13.md
+++ b/notes/0.0.13.md
@@ -3,3 +3,4 @@
 ## Changes
 
 * isEmpty() and isNotEmpty for array were added (#13)
+* java option added: `-g` when building J8+ (d8730d03a43dd372fd72a085795ffab0d9243aec)
